@@ -36,6 +36,11 @@
 		<plugin>tidypics</plugin>
 		<priority>after</priority>
 	</requires>
+	<requires>
+		<type>priority</type>
+		<plugin>thewire</plugin>
+		<priority>after</priority>
+	</requires>
 	
 	<suggests>
 		<type>plugin</type>
