@@ -40,6 +40,9 @@ function advanced_notifications_init() {
 	elgg_unregister_plugin_hook_handler("notify:entity:message", "object", "messages_notification_msg");
 	advanced_notifications_unregister_notification_object("object", "messages");
 	
+	// thewire
+	elgg_unregister_plugin_hook_handler("notify:entity:message", "object", "thewire_notify_message");
+	
 	// replace site notifications
 	elgg_register_plugin_hook_handler("register", "menu:filter", "advanced_notifications_filter_menu_hook");
 	elgg_register_plugin_hook_handler("route", "activity", "advanced_notifications_route_hook");
